name                          : HPath
version                       : 0.0.0
category                      : Source Tools, Text
license                       : BSD3
license-file                  : LICENSE
author                        : Jason Dusek
maintainer                    : HPath@solidsnack.be 
homepage                      : http://github.com/solidsnack/HPath
synopsis                      : Extract Haskell declarations by name.
description                   :
  Extract the source code for Haskell declarations by name, for use in
  documentation.


cabal-version                 : >= 1.6
build-type                    : Simple
extra-source-files            : README


library
  build-depends               : base >= 2
                              , haskell-src-exts >= 1.3.5
                              , containers
                              , parsec
                              , utf8-string >= 0.3
  exposed-modules             : HPath.Path
  extensions                  : StandaloneDeriving
                                NoMonomorphismRestriction


executable                      hpath
  main-is                     : Main.hs
  build-depends               : base >= 2
                              , haskell-src-exts >= 1.3.5
                              , containers
                              , parsec
                              , utf8-string >= 0.3
  extensions                  : StandaloneDeriving
                                NoMonomorphismRestriction

